Fix and improve font settings
The "normal" kerning option was not working for us, resulting
in shorter spaces after commas than normal spaces. Same for
ligatures, which made for example "fi" to close and hard to read.
I also add a super tiny letter-spacing to open it up a bit more.

--- a/datafiles/static/hackage.css
+++ b/datafiles/static/hackage.css
@@ -16,11 +16,11 @@ body {
   min-height: 100vh;
   position: relative;
   -webkit-text-size-adjust: 100%;
-  -webkit-font-feature-settings: "kern" 1;
-  -moz-font-feature-settings: "kern" 1;
-  -o-font-feature-settings: "kern" 1;
-  font-feature-settings: "kern" 1;
-  font-kerning: normal;
+  -webkit-font-feature-settings: "kern" 1, "liga" 0;
+  -moz-font-feature-settings: "kern" 1, "liga" 0;
+  -o-font-feature-settings: "kern" 1, "liga" 0;
+  font-feature-settings: "kern" 1, "liga" 0;
+  letter-spacing: 0.0015rem;
 }
 
 table, ul {
